remove unnecessary stop-mark from keyval_trim:nN

--- a/l3kernel/l3keys.dtx
+++ b/l3kernel/l3keys.dtx
@@ -1350,7 +1350,6 @@
             \@@_trim_auxiii:w
             #1 \s_@@_nil
             \@@_trim_auxiv:w
-          \s_@@_stop
         }
       \cs_new:Npn \@@_trim_auxi:w ##1 \s_@@_mark #1 ##2 \s_@@_mark ##3
         {
@@ -1374,8 +1373,11 @@
 %    \end{macrocode}
 %   This is the one macro which differs from the original definition.
 %    \begin{macrocode}
-      \cs_new:Npn \@@_trim_auxiv:w \s_@@_mark ##1 \s_@@_nil ##2 \s_@@_stop ##3
-        { ##3 { ##1 } }
+      \cs_new:Npn \@@_trim_auxiv:w
+          \s_@@_mark ##1 \s_@@_nil
+          \@@_trim_auxiii:w \s_@@_nil \@@_trim_auxiii:w
+          ##2
+        { ##2 { ##1 } }
     }
   \@@_tmp:n { ~ }
 \group_end:
