--- a/l3experimental/l3bitset/l3bitset.dtx
+++ b/l3experimental/l3bitset/l3bitset.dtx
@@ -132,12 +132,12 @@
 % \section{Using bitsets}
 %
 % \begin{function}[EXP,added = 2020-12-14]
-%   { \bitset_index:Nn, \bitset_index:cn }
+%   { \bitset_item:Nn, \bitset_item:cn }
 %   \begin{syntax}
-%     \cs{bitset_index:Nn}   \meta{bitset var}  \Arg{integer expression}
+%     \cs{bitset_item:Nn}   \meta{bitset var}  \Arg{integer expression}
 %   \end{syntax}
-% Evaluates the \meta{integer expression} and output \texttt{1} if the bit is
-% set and \texttt{0} otherwise.
+% Evaluates the \meta{integer expression} and output \texttt{1} if the bit with
+% this index number is set and \texttt{0} otherwise.
 % \end{function}
 %
 % \begin{function}[EXP,added = 2020-12-13]
@@ -182,9 +182,9 @@
 % \section{Syntactic sugar: Setting bits by keys}
 %
 % \begin{function}[added = 2020-12-19]
-%   {\bitset_gset_named_index:Nn}
+%   {\bitset_addto_named_index:Nn}
 %   \begin{syntax}
-%     \cs{bitset_gset_named_index:Nn} \meta{bitset var}
+%     \cs{bitset_addto_named_index:Nn} \meta{bitset var}
 %      \{
 %         \meta{name1} |=| \meta{index1} |,|
 %         \meta{name2} |=| \meta{index2} |,| \ldots{}
@@ -202,7 +202,7 @@
 %
 %  \begin{verbatim}
 %  \bitset_new:N \l_pdfannot_F_bitset
-%  \bitset_gset_named_index:Nn \l_pdfannot_F_bitset
+%  \bitset_addto_named_index:Nn \l_pdfannot_F_bitset
 %    {
 %      Invisible      = 1,
 %      Hidden         = 2,
@@ -453,10 +453,10 @@
 % \end{macro}
 % \begin{macro}
 %   {
-%     \bitset_index:Nn, \bitset_index:cn
+%     \bitset_item:Nn, \bitset_item:cn
 %   }
 %    \begin{macrocode}
-\cs_new:Npn \bitset_index:Nn #1 #2
+\cs_new:Npn \bitset_item:Nn #1 #2
   {
     \int_compare:nNnTF { #2 } > { 0 }
       {
@@ -466,7 +466,7 @@
         0
       }
   }
-\cs_generate_variant:Nn \bitset_index:Nn {cn}
+\cs_generate_variant:Nn \bitset_item:Nn {cn}
 %    \end{macrocode}
 % \end{macro}
 
@@ -496,10 +496,10 @@
 % \end{macro}
 % \begin{macro}
 %  {
-%    \bitset_gset_named_index:Nn
+%    \bitset_addto_named_index:Nn
 %  }
 %    \begin{macrocode}
-\cs_new_protected:Npn  \bitset_gset_named_index:Nn #1 #2
+\cs_new_protected:Npn  \bitset_addto_named_index:Nn #1 #2
   {
      \prop_if_exist:cF { g_@@_\cs_to_str:N #1 _key_prop }
        {
