add documentation for clist_sort:nN and tl_sort:NN

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -351,6 +351,23 @@
 %   described in Section~\ref{sec:l3sort:mech}.
 % \end{function}
 %
+% \begin{function}[added = 2021-01-23, EXP]{\clist_sort:NN, \clist_sort:nN}
+%   \begin{syntax}
+%     \cs{clist_sort:NN} \meta{clist var} \meta{conditional}
+%   \end{syntax}
+%   Sorts the items in the \meta{clist var}, using the \meta{conditional} to
+%   compare the items, and leaves the result in the input stream as a |clist|.
+%   The \meta{conditional} should have signature |:nnTF|, and return
+%   \texttt{true} if the two items being compared should be left in the same
+%   order, and \texttt{false} if the items should be swapped. The details of
+%   sorting comparison are described in Section~\ref{sec:l3sort:mech}.
+%   \begin{texnote}
+%     The result is returned within \cs{exp_not:n}, which means that the
+%     token list does not expand further when appearing in an
+%     \texttt{x}-type or \texttt{e}-type argument expansion.
+%   \end{texnote}
+% \end{function}
+%
 % \section{Comma list conditionals}
 %
 % \begin{function}[EXP,pTF]{\clist_if_empty:N, \clist_if_empty:c}
@@ -1517,7 +1534,10 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\clist_sort:Nn, \clist_sort:cn, \clist_gsort:Nn, \clist_gsort:cn}
+%   {
+%     \clist_sort:Nn, \clist_sort:cn, \clist_gsort:Nn, \clist_gsort:cn
+%     \clist_sort:nN, \clist_sort:NN
+%   }
 %   Implemented in \pkg{l3sort}.
 % \end{macro}
 %
