--- a/l3kernel/l3sort.dtx
+++ b/l3kernel/l3sort.dtx
@@ -840,7 +840,7 @@
 % we can use a merge sort implementation which is typically faster than the
 % quicksort implementation discussed above.
 %
-% \begin{macro}[EXP]{\tl_sort:nN,\tl_sort:NN}
+% \begin{macro}[EXP]{\tl_sort:nN,\tl_sort:oN,\tl_sort:NN}
 % \begin{macro}[EXP]
 %   {
 %     \@@_quick_prepare:Nnnn,
@@ -881,7 +881,7 @@
                 #2 #1 \s_@@_merge_exp_mark \s_@@_merge_exp_stop
             }
       }
-    \cs_new:Npn \tl_sort:NN #1#2
+    \cs_new:Npn \tl_sort:oN #1#2
       {
         \__kernel_exp_not:w
           \exp_after:wN \@@_merge_exp_after_bottom_up_tl:Nw \exp_after:wN #2
@@ -891,6 +891,7 @@
                 #2 #1 \s_@@_merge_exp_mark \s_@@_merge_exp_stop
             }
       }
+    \cs_new_eq:NN \tl_sort:NN \tl_sort:oN
   }
   {
     \cs_new:Npn \tl_sort:nN #1#2
@@ -906,6 +907,8 @@
               }
           }
       }
+    \cs_generate_variant:Nn \tl_sort:nN { oN }
+    \cs_new_eq:NN \tl_sort:NN \tl_sort:oN
     \cs_new:Npn \@@_quick_prepare:Nnnn #1#2#3#4
       {
         \prg_break: #4 \prg_break_point:
