--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -873,7 +873,7 @@
 %   described in Section~\ref{sec:l3sort:mech}.
 % \end{function}
 %
-% \begin{function}[added = 2017-02-06, EXP]{\tl_sort:nN}
+% \begin{function}[added = 2017-02-06, EXP]{\tl_sort:nN, \tl_sort:oN}
 %   \begin{syntax}
 %     \cs{tl_sort:nN} \Arg{token list} \meta{conditional}
 %   \end{syntax}
@@ -884,6 +884,19 @@
 %   left in the same order, and \texttt{false} if the items should be
 %   swapped. The details of sorting comparison are
 %   described in Section~\ref{sec:l3sort:mech}.
+%   \begin{texnote}
+%     The result is returned within \cs{exp_not:n}, which means that the
+%     token list does not expand further when appearing in an
+%     \texttt{x}-type or \texttt{e}-type argument expansion.
+%   \end{texnote}
+% \end{function}
+%
+% \begin{function}[added = 2021-01-23, EXP]{\tl_sort:NN}
+%   \begin{syntax}
+%     \cs{tl_sort:NN} \meta{tl var} \meta{conditional}
+%   \end{syntax}
+%   Like \cs{tl_sort:nN} but this sorts a \meta{tl var}, leaving the result in
+%   the input stream.
 %   \begin{texnote}
 %     The result is returned within \cs{exp_not:n}, which means that the
 %     token list does not expand further when appearing in an
@@ -2801,7 +2814,10 @@
 % \end{macro}
 %
 % \begin{macro}
-%   {\tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn, \tl_sort:nN}
+%   {
+%     \tl_sort:Nn, \tl_sort:cn, \tl_gsort:Nn, \tl_gsort:cn,
+%     \tl_sort:nN, \tl_sort:oN, \tl_sort:NN
+%   }
 %   Implemented in \pkg{l3sort}.
 % \end{macro}
 %
