--- a/l3backend/l3backend-opacity.dtx
+++ b/l3backend/l3backend-opacity.dtx
@@ -126,6 +126,14 @@
 %    \end{macrocode}
 % \end{variable}
 %
+% \begin{variable}{\l_@@_backend_fill_tl, \l_@@_backend_stroke_tl}
+%   We use |tl| here for speed: at the backend, this should be reasonable.
+%    \begin{macrocode}
+\tl_new:N \l_@@_backend_fill_tl
+\tl_new:N \l_@@_backend_stroke_tl
+%    \end{macrocode}
+% \end{variable}
+%
 % \begin{macro}{\@@_backend_select:n, \@@_backend_select_aux:n}
 % \begin{macro}{\@@_backend_reset:}
 %   Other than the need to evaluate the opacity as an \texttt{fp}, much the
@@ -139,6 +147,8 @@
  }
 \cs_new_protected:Npn \@@_backend_select_aux:n #1
   {
+    \tl_set:Nn \l_@@_backend_fill_tl {#1}
+    \tl_set:Nn \l_@@_backend_stroke_tl {#1}
     \pdfmanagement_add:nnn { Page / Resources / ExtGState }
       { opacity #1 }
       { << /ca ~ #1 /CA ~ #1 >> }
@@ -156,23 +166,40 @@
 % \end{macro}
 %
 % \begin{macro}{\@@_backend_fill:n, \@@_backend_stroke:n}
-% \begin{macro}{\@@_backend:nn, \@@_backend:xn}
-%   Similar to the above but with no stack and only adding to one or other of
-%   the entries.
+% \begin{macro}{\@@_backend_fillstroke:nn, \@@_backend_fillstroke:xx}
+%   For separate fill and stroke, we need to work out if we need to do
+%   more work or if we can stick to a single setting.
 %    \begin{macrocode}
 \cs_new_protected:Npn \@@_backend_fill:n #1
-  { \@@_backend:nn { \fp_eval:n { min(max(0,#1),1) } } { ca } }
-\cs_new_protected:Npn \@@_backend_stroke:n #1
-  { \@@_backend:nn { \fp_eval:n { min(max(0,#1),1) } } { CA } }
-\cs_new_protected:Npn \@@_backend:nn #1#2
   {
-    \pdfmanagement_add:nnn { Page / Resources / ExtGState }
-      { opacity #1 }
-      { << /#2 ~ #1 >> }
-   \@@_backend_stack_push:nn \c_@@_backend_stack_int
-     { /opacity #1 ~ gs }
+    \@@_backend_fill_stroke:xx
+      { \fp_eval:n { min(max(0,#1),1) } }
+      \l_@@_backend_stroke_tl
   }
-\cs_generate_variant:Nn \@@_backend:nn { x }
+\cs_new_protected:Npn \@@_backend_stroke:n #1
+  {
+    \@@_backend_fill_stroke:xx
+      \l_@@_backend_fill_tl
+      { \fp_eval:n { min(max(0,#1),1) } }
+  }
+\cs_new_protected:Npn \@@_backend_fill_stroke:nn #1#2
+  {
+    \str_if_eq:nnTF {#1} {#2}
+      { \@@_backend_select_aux:n {#1} }
+      {
+        \tl_set:Nn \l_@@_backend_fill_tl {#1}
+        \tl_set:Nn \l_@@_backend_stroke_tl {#2}
+        \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+          { opacity.fill #1 }
+          { << /ca ~ #1 >> }
+        \pdfmanagement_add:nnn { Page / Resources / ExtGState }
+          { opacity.stroke #1 }
+          { << /CA ~ #2 >> }
+        \@@_backend_stack_push:nn \c_@@_backend_stack_int
+         { /opacity.fill #1 ~ gs /opacity.stroke #2 ~ gs }
+      }
+  }
+\cs_generate_variant:Nn \@@_backend_fill_stroke:nn { xx }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
